--- a/package.json
+++ b/package.json
@@ -8,12 +8,43 @@
     "start": "NODE_ENV=production node ci",
     "build-server": "node build > build.log",
     "build-client": "NODE_ENV=production webpack -p --config webpack.production.config.js",
-    "build": "npm run build-client && npm run build-server",    
-    "clean-server":"rm -rf build/*",
-    "clean-client":"rm -rf public/build/*",
-    "clean":"npm run clean-server && npm run clean-client", 
+    "build": "npm run build-client && npm run build-server",
+    "clean-server": "rm -rf build/*",
+    "clean-client": "rm -rf public/build/*",
+    "clean": "npm run clean-server && npm run clean-client",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Gaetano Checinski",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "babel": "^5.4.7",
+    "babel-core": "^5.4.7",
+    "babel-loader": "^5.1.3",
+    "baobab": "^1.1.0",
+    "baobab-react": "^0.1.1",
+    "css-loader": "^0.14.4",
+    "emmett": "^3.0.0",
+    "express": "^4.12.4",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^5.1.0",
+    "gulp-callback": "0.0.3",
+    "gulp-jshint": "^1.11.0",
+    "gulp-jsx": "^2.0.0",
+    "gulp-jsxhint": "0.0.1",
+    "gulp-less": "^3.0.3",
+    "gulp-react": "^3.0.1",
+    "http-proxy": "^1.11.1",
+    "jshint": "^2.7.0",
+    "less": "^2.5.1",
+    "less-loader": "^2.2.0",
+    "mongoose": "^4.0.3",
+    "node-libs-browser": "^0.5.2",
+    "react": "^0.13.3",
+    "react-jsx": "^0.13.0",
+    "react-router": "^0.13.3",
+    "reactify": "^1.1.1",
+    "style-loader": "^0.12.3",
+    "webpack": "^1.9.10",
+    "webpack-dev-server": "^1.9.0"
+  }
 }
