--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "baobab": "^1.1.0",
     "baobab-react": "^0.1.1",
     "css-loader": "^0.14.4",
+    "decorators-loader": "^1.0.1",
     "emmett": "^3.0.0",
     "express": "^4.12.4",
+    "extend": "^2.0.1",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-callback": "0.0.3",
