--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
     "style-loader": "^0.12.3",
+    "vinyl-named": "^1.1.0",
     "webpack": "^1.9.10",
     "webpack-dev-server": "^1.9.0"
   }
