sourcemap support added

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start-dev": "node bootstrap ",
     "start": "NODE_ENV=production node bootstrap",
     "build-server": "node build > build.log",
-    "build-client": "NODE_ENV=production webpack -p --config webpack.production.config.js",
+    "build-client": "NODE_ENV=production webpack -p --config config/webpack.production.config.js",
     "build": "npm run build-client && npm run build-server",
     "clean-server": "rm -rf build/*",
     "clean-client": "rm -rf public/build/*",
@@ -37,6 +37,7 @@
     "gulp-jsxhint": "0.0.1",
     "gulp-less": "^3.0.3",
     "gulp-react": "^3.0.1",
+    "gulp-sourcemaps": "^1.5.2",
     "hotswap": "^1.1.0",
     "http-proxy": "^1.11.1",
     "jshint": "^2.7.0",
@@ -48,6 +49,7 @@
     "react-jsx": "^0.13.0",
     "react-router": "^0.13.3",
     "reactify": "^1.1.1",
+    "source-map-support": "^0.3.1",
     "style-loader": "^0.12.3",
     "vinyl-named": "^1.1.0",
     "webpack": "^1.9.10",
