--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "ci.js",
   "scripts": {
-    "start-dev": "node ci ",
-    "start": "NODE_ENV=production node ci",
+    "start-dev": "node bootstrap ",
+    "start": "NODE_ENV=production node bootstrap",
     "build-server": "node build > build.log",
     "build-client": "NODE_ENV=production webpack -p --config webpack.production.config.js",
     "build": "npm run build-client && npm run build-server",
@@ -19,6 +19,7 @@
   "dependencies": {
     "babel": "^5.4.7",
     "babel-core": "^5.4.7",
+    "babel-eslint": "^3.1.9",
     "babel-loader": "^5.1.3",
     "baobab": "^1.1.0",
     "baobab-react": "^0.1.1",
@@ -30,6 +31,7 @@
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-callback": "0.0.3",
+    "gulp-inject-string": "0.0.2",
     "gulp-jshint": "^1.11.0",
     "gulp-jsx": "^2.0.0",
     "gulp-jsxhint": "0.0.1",
