--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "emmett": "^3.0.0",
     "express": "^4.12.4",
     "extend": "^2.0.1",
+    "extract-text-webpack-plugin": "^0.8.1",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
     "gulp-callback": "0.0.3",
@@ -44,6 +45,7 @@
     "jshint": "^2.7.0",
     "less": "^2.5.1",
     "less-loader": "^2.2.0",
+    "mkdirp": "^0.5.1",
     "mongoose": "^4.0.3",
     "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
